--- a/website/pKa2AA.html
+++ b/website/pKa2AA.html
@@ -1,6 +1,7 @@
 <!DOCTYPE>
 <html>
 <body>
+	<!--- I MERGED THIS INTO THE SIMPLE TITRATION PAGE --->
 	<head>
 		<title>pH2AminoAcid</title>
 		<link href="css/styles.css" rel="stylesheet" type="text/css" />
